UtahLiveDataTest/src/objects/FundingSourceBudgetCategory__c.object
<CustomObject>
    <description>[Business] This is junction object for Funding Sources and Budget Categories</description>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocation Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AmountAllocated__c</fullName>
        <description>This is to calculate Total Allocated Amount * Allocated Percentage</description>
        <formula>AllocationPercentage__c  *  TotalAmountAllocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated(Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Budget Category</label>
        <referenceTo>AwardBudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Source Budget Category</relationshipLabel>
        <relationshipName>Funding_Source_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <formula>AwardBudgetCategory__r.Amount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount(Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Source Budget Category</relationshipLabel>
        <relationshipName>Funding_Source_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSourceRecordType__c</fullName>
        <formula>FundingSource__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Source Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSourceType__c</fullName>
        <formula>Text(FundingSource__r.Type__c)</formula>
        <label>Funding Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <label>Funding Source</label>
        <referenceTo>FundingSource__c</referenceTo>
        <relationshipLabel>Funding Source Budget Category</relationshipLabel>
        <relationshipName>Funding_Source_Budget_Category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>FundingSource__r.HideEditDelete__c</formula>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Source Budget Category (Internal Budget Category)</relationshipLabel>
        <relationshipName>Funding_Source_Budget_Category1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;FSBC-&apos;+ FundingSource__r.Grant__r.GrantAbbreviation__c +&apos;-&apos;</formula>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainAmount__c</fullName>
        <formula>IF( FundingSource__r.RecordType.DeveloperName=&apos;External&apos; ,IF (AwardBudgetCategory__r.RemainingAmount__c == null, 0, AwardBudgetCategory__r.RemainingAmount__c), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to calculate remaining amount in funding account budget categories</description>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmountAllocated__c</fullName>
        <description>Amount which is allocated to each line item on Award Level( Populated through Trigger)</description>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding Source Budget Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Source Budget Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>